plugins {
    id 'java'
    id 'idea'
}

group 'net.njsharpe'
version '1.0.0'

targetCompatibility = 17
sourceCompatibility = 17

jar {
    archiveFileName = "${rootProject.name}.jar"
    archiveVersion = null
}

repositories {
    mavenCentral()
    maven { url = 'https://oss.sonatype.org/repositories/snapshots/' }
    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.19.2-R0.1-SNAPSHOT'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.jetbrains:annotations:23.0.0'
}